--- a/style.css
+++ b/style.css
@@ -8,8 +8,11 @@
     display: flex;
     background-color: #1F2937;
     flex-direction: column;
-    padding-left: 200px;
-    padding-right: 200px;
+}
+
+.header, .container-one {
+    width: 62%;
+    margin: auto;
 }
 
 .header {
@@ -31,9 +34,46 @@
     gap: 10px;
 }
 
-a {
+a, .title-secondary {
     font-size: 18px;
     color: #E5E7EB;
     text-decoration: none;
+}
+
+.container-one {
+    display: flex;
+    margin-top: 60px;
+    margin-bottom: 60px;
+}
+
+.title-block {
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+    flex-wrap: wrap;
+    flex-basis: 50%;
+}
+
+h1 {
+    font-size: 48px;
+    font-weight: bolder;
+    color: #F9FAF8;
+}
+
+button {
+    background-color: #3882F6;
+    color: #F9FAF8;
+    max-width: fit-content;
+    padding: 7px 35px;
+    border-radius: 5px;
+    border: none;
+    font-size: 18px;
+}
+
+.featured-image {
+    background-color: gray;
+    border: solid black;
+    text-align: center;
+    flex: 1;
 }
 
