Add call to action section

--- a/style.css
+++ b/style.css
@@ -145,3 +145,33 @@ button {
     margin-right: 10%;
 }
 
+.section-four {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 100px 0px;
+}
+
+.sign-up-block {
+    display: flex;
+    background-color: #3882F6;
+    border-radius: 10px;
+    gap:100px;
+    width: 70%;
+    padding: 40px 0px;
+    justify-content: space-around;
+    flex-wrap: wrap;
+}
+
+.action-button {
+    margin-top: 10px;
+    border: solid white;
+    padding: 1px 30px;
+    height: 30px;
+    font-size: 14px;
+}
+
+.action-heading, .action-para{
+    color: #E5E7EB;
+}
+
